--- a/BlazorId/Client/Pages/Admin/Users.razor
+++ b/BlazorId/Client/Pages/Admin/Users.razor
@@ -63,7 +63,7 @@
                                placeholder="FirstName"
                         @bind="@objUser.FirstName" />
                         <input class="form-control" type="text"
-                               placeholder="FirstName"
+                               placeholder="LastName"
                         @bind="@objUser.LastName" />
                         <input class="form-control" type="text"
                                placeholder="Street"
