--- a/BlazorId/Client/Pages/Admin/Classrooms.razor
+++ b/BlazorId/Client/Pages/Admin/Classrooms.razor
@@ -13,21 +13,53 @@
             <tr>
                 <th>Id</th>
                 <th>Name</th>
+                <th>Company</th>
                 <th>
-                    Action
-                    <button class="btn btn-primary"
-                    @onclick="(() => Edit(objClassroom))">
-                        Add
-                    </button>
-                </th>
+                    @if (!ShowForm)
+                    {
+                        <button class="btn btn-primary"
+                                @onclick="(() => Edit(objClassroom))">
+                            Add
+                        </button>
+                    }
+                </th>              
             </tr>
         </thead>
         <tbody>
+            @if (ShowForm)
+            {
+                <tr>
+                    <td>@objClassroom.Id</td>
+                    <td>
+                        <input class="form-control" type="text"
+                               placeholder="Name"
+                               @bind="@objClassroom.Name" />
+                    </td>
+                    <td>
+                        <InputSelect class="form-select " @bind-Value="@objClassroom.UserId">
+                            <option selected>Select a Company</option>
+                            @foreach (var user in users)
+                            {
+                                <option value="@user.Id">@user.FirstName @user.ZipCode @user.City</option>
+                            }
+                        </InputSelect>
+                    </td>
+                    <td>
+                        <!-- Button to save the classroom -->
+                        <button class="btn btn-primary"
+                                @onclick="(() => Save(objClassroom))">
+                            Save
+                        </button>
+                       
+                    </td>
+                </tr>
+            }
             @foreach (var classroom in classrooms)
             {
                 <tr>
                     <td>@classroom.Id</td>
                     <td>@classroom.Name</td>
+                    <td>@classroom.User.FirstName @classroom.User.ZipCode @classroom.User.City</td>
                     <td>
                         <button class="btn btn-primary"
                         @onclick="(() => Edit(classroom))">
@@ -42,53 +74,10 @@
             }
         </tbody>
     </table>
-    @if (ShowPopup)
-    {
-        <!-- This is the popup to create or edit a user -->
-        <div class="modal" tabindex="-1" style="display:block" role="dialog">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h3 class="modal-title">Edit</h3>
-                        <!-- Button to close the popup -->
-                        <button type="button" class="close"
-                        @onclick="ClosePopup">
-                            <span aria-hidden="true">X</span>
-                        </button>
-                    </div>
-                    <!-- Edit form for the current user -->
-                    <div class="modal-body">
-                        <input class="form-control" type="text"
-                               placeholder="Name"
-                        @bind="@objClassroom.Name" />
-                        <InputSelect class="form-select " @bind-Value="@objClassroom.UserId">
-                            <option selected>Select a Company</option>
-                            @foreach (var user in users)
-                            {
-                                <option value="@user.Id">@user.FirstName @user.ZipCode @user.City</option>
-                            }
-                        </InputSelect>
-                        <br /><br />
-                        <!-- Button to save the classroom -->
-                        <button class="btn btn-primary"
-                        @onclick="(() => Save(objClassroom))">
-                            Save
-                        </button>
-                        <!-- Button to delete the classroom -->
-                        <button class="btn btn-danger"
-                        @onclick="(() => Delete(objClassroom))">
-                            Delete
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    }
-
 }
 else
 {
-    <p>No users found.</p>
+    <p>No classroom found.</p>
 }
 
 
@@ -97,7 +86,8 @@ else
     private Classroom objClassroom;
     private List<ApplicationUser> users;
     private string userRole = "Company";
-    bool ShowPopup = false;
+    // To enable showing the form
+    bool ShowForm = false;
 
     protected override async Task OnInitializedAsync()
     {
@@ -110,7 +100,7 @@ else
     private async Task Edit(Classroom classroom)
     {
         objClassroom = classroom;
-        ShowPopup = true;
+        ShowForm = true;
     }
 
     private async Task Save(Classroom classroom)
@@ -124,7 +114,7 @@ else
             await client.PutAsJsonAsync("api/Classrooms/" + classroom.Id, classroom);
         }
         
-        ShowPopup = false;
+        ShowForm = false;
         await OnInitializedAsync();
     }
 
@@ -132,11 +122,6 @@ else
     {
         await client.DeleteAsync($"api/Classrooms/{classroom.Id}");
         await OnInitializedAsync();
-    }
-
-    void ClosePopup()
-    {
-        ShowPopup = false;
     }
 }
 
