--- a/BlazorId/Client/wwwroot/css/app.css
+++ b/BlazorId/Client/wwwroot/css/app.css
@@ -19,7 +19,7 @@ a, .btn-link {
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
 .content {
@@ -99,3 +99,43 @@ a, .btn-link {
     .loading-progress-text:after {
         content: var(--blazor-load-percentage-text, "Loading");
     }
+
+.container {
+    position: relative;
+    transition: opacity 2s ease-in-out;
+}
+
+.picture {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('/pictures/training.jpg');
+    background-size: cover;
+    opacity: 1;
+    transition: opacity 2s ease-in-out;
+}
+
+.container:hover .picture {
+    opacity: 0.2;
+}
+
+
+.container:hover * {
+    opacity: 1;
+}
+
+@keyframes cardSlide {
+    0% {
+        transform: translateX(100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+.card {
+    animation: cardSlide 2s ease-out; /* Ajustez la durée et le timing de l'animation selon vos besoins */
+}
